<?xml version="1.0"?>
<package>
  <name>guidance</name>
  <version>0.0.1</version>
  <description>The Guidance Ros package</description>

  <maintainer email="Ketan@todo.todo">Ketan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
